# rportable

./: README.md  build.bat  build_wheel.bat  pdm_build.py  pyproject.toml
launcher_scripts/: str_integer.bat
options/docs/: README.md  build.bat  pyproject.toml
options/i386/: README.md  build.bat  pyproject.toml
options/x64/: README.md  pyproject.toml
rportable/launcher_scripts/: str_integer.bat
rportable_launcher_scripts/: Rscript.bat
