[project]
name = "rportable-launcher"
version = "3.2.3"
description = "R-Studio built with the portable Apps Framework. "
authors = [
    {name = "James Parrott", email = "james.parrott@proton.me"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.md"}

[project.urls]   
"Homepage" = "https://sourceforge.net/projects/rportable/"
"Bug Tracker" = "https://github.com/fiftysevendegreesofrad/sdna_plus/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes=["rportable", "rportable_launcher_scripts"]


[tool.pdm.build.wheel-data]
# Install all files under scripts/ to the $prefix/bin directory.
scripts = ["rportable_launcher_scripts/*"]
